--- a/kubernetes/deployments/egress/ingress-hosts-rules.yaml
+++ b/kubernetes/deployments/egress/ingress-hosts-rules.yaml
@@ -1,7 +1,7 @@
 #---------------------------------------------------------------------
 # Manifest File to create Ingress Rules for Hosts
 #---------------------------------------------------------------------
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-hosts
