--- a/kubernetes/deployments/egress/ingress-hosts-rules.yaml
+++ b/kubernetes/deployments/egress/ingress-hosts-rules.yaml
@@ -1,19 +1,37 @@
 #---------------------------------------------------------------------
 # Manifest File to create Ingress Rules for Hosts
 #---------------------------------------------------------------------
+#apiVersion: networking.k8s.io/v1
+#kind: Ingress
+#metadata:
+#  name: ingress-hosts
+#
+#spec:
+#  rules:
+#    - host: www.pugachev.fun
+#      http:
+#        paths:
+#          - path: /
+#          - backend:
+#              serviceName: nginx-service
+#              servicePort: 80
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-hosts
-
 spec:
   rules:
-    - host: www.pugachev.fun
+    - host: "www.pugachev.fun"
       http:
         paths:
-          - backend:
-              serviceName: nginx-service
-              servicePort: 80
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: nginx-service
+                port:
+                  number: 80
+
 
 #    - host: first.app.net
 #      http:
