--- a/kubernetes/deployments/egress/ingress-hosts-rules.yaml
+++ b/kubernetes/deployments/egress/ingress-hosts-rules.yaml
@@ -29,7 +29,7 @@ spec:
             path: "/"
             backend:
               service:
-                name: nginx-service
+                name: "nginx-service"
                 port:
                   number: 80
 
