--- a/kubernetes/deployments/egress/ingress-hosts-rules.yaml
+++ b/kubernetes/deployments/egress/ingress-hosts-rules.yaml
@@ -15,6 +15,8 @@
 #          - backend:
 #              serviceName: nginx-service
 #              servicePort: 80
+
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -29,21 +31,6 @@ spec:
             path: "/"
             backend:
               service:
-                name: "nginx-service"
+                name: nginx-service
                 port:
                   number: 80
-
-
-#    - host: first.app.net
-#      http:
-#        paths:
-#          - backend:
-#              serviceName: first
-#              servicePort: 80
-#
-#    - host: second.app.net
-#      http:
-#        paths:
-#          - backend:
-#              serviceName: second
-#              servicePort: 80
