--- a/kubernetes/deployments/egress/ingress-hosts-rules.yaml
+++ b/kubernetes/deployments/egress/ingress-hosts-rules.yaml
@@ -11,8 +11,8 @@ spec:
     - host: "www.pugachev.fun"
       http:
         paths:
-          - pathType: Prefix
-            path: "/nginx"
+          - path: "/nginx"
+            pathType: Prefix
             backend:
               service:
                 name: nginx-service
