--- a/kubernetes/deployments/egress/ingress-hosts-rules.yaml
+++ b/kubernetes/deployments/egress/ingress-hosts-rules.yaml
@@ -11,7 +11,7 @@ spec:
     - host: "www.pugachev.fun"
       http:
         paths:
-          - path: "/nginx"
+          - path: "/"
             pathType: Prefix
             backend:
               service:
