--- a/kubernetes/deployments/apache-http/apache-http-deployment.yaml
+++ b/kubernetes/deployments/apache-http/apache-http-deployment.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: apache-http
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: apache
   template:
     metadata:
       labels:
-        app: nginx
+        app: apache
     spec:
       containers:
-        - name: nginx
-          image: nginx:latest
+        - name: apache
+          image: httpd:latest
           ports:
             - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: apache-http
 spec:
   type: ClusterIP
   selector:
