--- a/kubernetes/deployments/egress/ingress-hosts-rules.yaml
+++ b/kubernetes/deployments/egress/ingress-hosts-rules.yaml
@@ -19,7 +19,7 @@ spec:
                 port:
                   number: 80
 
-    - host: "www.form.pugachev.fun"
+    - host: "www.pugachev.fun.form"
       http:
         paths:
           - path: "/"
