--- a/kubernetes/deployments/egress/ingress-hosts-rules.yaml
+++ b/kubernetes/deployments/egress/ingress-hosts-rules.yaml
@@ -7,25 +7,25 @@ metadata:
   name: ingress-hosts
 
 spec:
-  rules:
-    - host: "www.pugachev.fun"
-      http:
-        paths:
-          - path: "/"
-            pathType: Prefix
-            backend:
-              service:
-                name: nginx-service
-                port:
-                  number: 80
+  #  rules:
+  #    - host: "www.pugachev.fun"
+  #      http:
+  #        paths:
+  #          - path: "/"
+  #            pathType: Prefix
+  #            backend:
+  #              service:
+  #                name: nginx-service
+  #                port:
+  #                  number: 80
 
-    - host: "pugachev.fun"
-      http:
-        paths:
-          - path: "/"
-            pathType: Prefix
-            backend:
-              service:
-                name: apache-http
-                port:
-                  number: 80
+  - host: "www.pugachev.fun"
+    http:
+      paths:
+        - path: "/"
+          pathType: Prefix
+          backend:
+            service:
+              name: apache-http
+              port:
+                number: 80
