--- a/kubernetes/deployments/egress/ingress-hosts-rules.yaml
+++ b/kubernetes/deployments/egress/ingress-hosts-rules.yaml
@@ -8,16 +8,16 @@ metadata:
 
 spec:
   rules:
-    #    - host: "www.pugachev.fun"
-    #      http:
-    #        paths:
-    #          - path: "/"
-    #            pathType: Prefix
-    #            backend:
-    #              service:
-    #                name: nginx-service
-    #                port:
-    #                  number: 80
+    - host: "pugachev.fun"
+      http:
+        paths:
+          - path: "/"
+            pathType: Prefix
+            backend:
+              service:
+                name: nginx-service
+                port:
+                  number: 80
 
     - host: "www.pugachev.fun"
       http:
