--- a/kubernetes/common_charts/nginx/templates/deployment.yaml
+++ b/kubernetes/common_charts/nginx/templates/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: { { .Release.Name } }-deployment
+  name: "{{ .Release.Name }}-deployment"
   labels:
-    app: { { .Release.Name } }--deployment
+    app: "{{ .Release.Name }}-deployment"
 spec:
-  replicas: { { .Values.replicaCount } }
+  replicas: "{{ .Values.replicaCount }}"
   selector:
     matchLabels:
-      app: { { .Release.Name } }-nginx
+      app: "{{ .Release.Name }}-nginx"
   template:
     metadata:
       labels:
-        app: { { .Release.Name } }-nginx
+        app: "{{ .Release.Name }}-nginx"
     spec:
       containers:
-          - name: { { .Release.Name } }-nginx
-            image: { { .Values.container.image } }
-            ports:
-              - containerPort: 80
+        - name: "{{ .Release.Name }}-nginx"
+          image: "{{ .Values.container.image }}"
+          ports:
+            - containerPort: 80
