--- a/kubernetes/common_charts/nginx/templates/service.yaml
+++ b/kubernetes/common_charts/nginx/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: { { .Release.Name } }-service
+  name: "{{ .Release.Name }}-service"
 spec:
   type: ClusterIP
   selector:
-    app: { { .Release.Name } }-nginx
+    app: "{{ .Release.Name }}-service"
   ports:
-      - name: { { .Release.Name } }-listener
-        protocol: TCP
-        port: 80
-        targetPort: 80
+    - name: "{{ .Release.Name }}-listener"
+      protocol: TCP
+      port: 80
+      targetPort: 80
