--- a/kubernetes/deployments/nginx/nginx-deploymen.yaml
+++ b/kubernetes/deployments/nginx/nginx-deploymen.yaml
@@ -23,7 +23,7 @@ kind: Service
 metadata:
   name: nginx-service
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: nginx
   ports:
