--- a/kubernetes/deployments/apache-http/apache-http-deployment.yaml
+++ b/kubernetes/deployments/apache-http/apache-http-deployment.yaml
@@ -23,10 +23,10 @@ kind: Service
 metadata:
   name: apache-http
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: apache
   ports:
     - protocol: TCP
-      port: 80
+      port: 81
       targetPort: 80
