--- a/kubernetes/deployments/ingress/ingress-hosts-rules.yaml
+++ b/kubernetes/deployments/ingress/ingress-hosts-rules.yaml
@@ -19,13 +19,13 @@ spec:
                 port:
                   number: 80
 
-    - host: "www.form.pugachev.fun"
-      http:
-        paths:
-          - path: "/"
-            pathType: Prefix
-            backend:
-              service:
-                name: apache-http
-                port:
-                  number: 80
+#    - host: "www.form.pugachev.fun"
+#      http:
+#        paths:
+#          - path: "/"
+#            pathType: Prefix
+#            backend:
+#              service:
+#                name: apache-http
+#                port:
+#                  number: 80
