--- a/kubernetes/deployments/nginx/nginx-deploymen.yaml
+++ b/kubernetes/deployments/nginx/nginx-deploymen.yaml
@@ -22,11 +22,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
+  labels:
+    app.kubernetes.io/name: nginx
 spec:
-  type: ClusterIP
   selector:
-    app: nginx
+    app.kubernetes.io/name: nginx
   ports:
-    - protocol: TCP
+    - names: http
       port: 80
+      protocol: TCP
       targetPort: 80
+  type: ClusterIP
