--- a/kubernetes/deployments/nginx/nginx-deploymen.yaml
+++ b/kubernetes/deployments/nginx/nginx-deploymen.yaml
@@ -28,7 +28,7 @@ spec:
   selector:
     app.kubernetes.io/name: nginx
   ports:
-    - names: http
+    - name: http
       port: 80
       protocol: TCP
       targetPort: 80
