adding kind config cluster

--- a/kind/kind_configuration.yaml
+++ b/kind/kind_configuration.yaml
@@ -9,7 +9,7 @@ node:
     kubeadmConfigPatches:
       - |
         kind: InitConfiguration
-        nodeRistration:
+        nodeRegistration:
           kubeletExtraArgs:
             node-labels: "ingress-ready-true"
     extraPortMappings:
