--- a/kind/kind_configuration.yaml
+++ b/kind/kind_configuration.yaml
@@ -3,7 +3,7 @@ apiVersion: kind.x-k8s.io/v1alpha4
 name: study
 networking:
   apiServerPort: 6433
-node:
+nodes:
   - role: control-plane
     image: kindest/node:v1.25.11
     kubeadmConfigPatches:
