changing ip cluster adress

--- a/kind/kind_configuration.yaml
+++ b/kind/kind_configuration.yaml
@@ -2,6 +2,7 @@ kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 name: study
 networking:
+  apiServerAddress: "92.118.170.194"
   apiServerPort: 6433
 nodes:
   - role: control-plane
