changing settings metallb

--- a/kubernetes/deployments/ingress/ingress-resource-path.yaml
+++ b/kubernetes/deployments/ingress/ingress-resource-path.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-  name: ingress-resource-3
+  name: ingress-resource-path
 spec:
   ingressClassName: nginx
   rules:
