--- a/kubernetes/deployments/ingress/ingress-resource-hosts.yaml
+++ b/kubernetes/deployments/ingress/ingress-resource-hosts.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-resource-2
+  name: ingress-resource-hosts
 spec:
   ingressClassName: nginx
   rules:
