--- a/kubernetes/deployments/ingress/ingress-resource-main.yaml
+++ b/kubernetes/deployments/ingress/ingress-resource-main.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-resource-1
+  name: ingress-resource-main
 spec:
   ingressClassName: nginx
   rules:
